--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,129 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Saira:wght@300;400;500;600;700&display=swap');
+
+html, body{
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: grid;
+}
+
+app-root{
+    display: grid;
+    background-image: url('/assets/img/bckg/bckg-main.png');
+    background-size: cover;
+    background-position: 50% 50%;
+
+    padding: 20px;
+}
+app-root > *{
+    display: grid;
+}
+
+router-outlet{
+    position: absolute;
+}
+
+*{
+    outline: none;
+    color: #aaaaaa;
+    font-family: 'Saira', sans-serif;
+}
+
+a{
+    text-decoration: none;
+}
+
+button, select, .pointer, input[type="submit"], option{
+    cursor: pointer;
+}
+
+button{
+    border: none;
+}
+
+div{
+    box-sizing: border-box;
+}
+
+svg path{
+    transition: .3s;
+}
+
+ul, li{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+h1, h2, h3, p{margin: 0px; padding: 0px;}
+
+span.hr{
+    height: 1px;
+    background-color: #AAAAAA;
+    width: 100%;
+}
+
+
+
+.window{
+    background-color: #333333;
+    border-radius: 20px;
+
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 60px);
+    row-gap: 10px;
+
+    width: 100%;
+    height: 100%;
+    padding: 20px 50px;
+}
+
+.standart-input{
+    height: 38px;
+    background-color: #222222;
+    border-radius: 10px;
+
+    padding: 0px 10px;
+
+    display: grid;
+    align-items: center;
+}
+
+.inputName{
+    font-size: 14px;
+    font-weight: 500;
+}
+
+
+.link{
+    transition: .3s;
+
+    display: grid;
+    grid-template-columns: auto 1fr;
+    column-gap: 10px;
+    align-items: center;
+
+    cursor: pointer;
+}
+
+.link.active{
+    color: #00AE98;
+}
+.link.active svg path{
+    fill: #00AE98;
+}
+
+.link.active:hover{
+    color: #00AE98;
+}
+.link.active:hover svg path{
+    fill: #00AE98;
+}
+
+.link:hover{
+    color: #509289;
+}
+
+.link:hover svg path{
+    fill: #509289;
+}
