--- a/src/app/components/alo-components/sidebar-alo/sidebar-alo.component.html
+++ b/src/app/components/alo-components/sidebar-alo/sidebar-alo.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <img src="/assets/img/logo/logo.svg" alt="logo" class="logo pointer" routerLink="home" (click)="changeTitleSection.emit('Home')">
+    <img src="/assets/img/logo/logo.svg" alt="CactusSoft" class="logo">
 
     <div class="menu">
         <ul>
