--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login">
 
     <img src="/assets/img/logo/logo.svg" alt="CactusSoft" class="logo">
-    <button (click)="toLogin()">Login with discord</button>
+    <button (click)="toLogin()" class="standart-btn">Login with discord</button>
 
 </div>
 
