--- a/src/app/components/alo-components/ds-joiner/ds-joiner.component.html
+++ b/src/app/components/alo-components/ds-joiner/ds-joiner.component.html
@@ -1,26 +1,59 @@
 <div class="window">
-    <div class="">
-        <span class="inputName">Monitoring account token</span>
+
+    <div class="input-block">
+        <span class="inputName">Account token (monitoring)</span>
         <div class="standart-input"></div>
+        <button type="button" class="standart-input" (click)="onOpenPopup('Monitoring account', 'Token', false)">
+    <img src="/assets/img/icons/plus.svg" alt="add">
+</button>
     </div>
-    <div class="">
-        <span class="inputName">Monitoring account token</span>
+
+    <div class="input-block">
+        <span class="inputName">Account token (target)</span>
         <div class="standart-input"></div>
+        <button type="button" class="standart-input" (click)="onOpenPopup('Target account', 'Token', false)">
+            <img src="/assets/img/icons/plus.svg" alt="add">
+        </button>
     </div>
-    <div class="">
-        <span class="inputName">Monitoring account token</span>
+    
+    <div class="input-block">
+        <span class="inputName">Channels</span>
         <div class="standart-input"></div>
+        <button type="button" class="standart-input" (click)="onOpenPopup('Channels', 'Separate with commas', true)">
+            <img src="/assets/img/icons/plus.svg" alt="add">
+        </button>
     </div>
-    <div class="">
-        <span class="inputName">Monitoring account token</span>
+    
+    <div class="input-block">
+        <span class="inputName">Positive keywords</span>
         <div class="standart-input"></div>
+        <button type="button" class="standart-input" (click)="onOpenPopup('Positive kw', 'true, good', false)">
+            <img src="/assets/img/icons/plus.svg" alt="add">
+        </button>
     </div>
-    <div class="">
-        <span class="inputName">Monitoring account token</span>
+    
+    <div class="input-block">
+        <span class="inputName">Negative keywords</span>
         <div class="standart-input"></div>
+        <button type="button" class="standart-input" (click)="onOpenPopup('Negative kw', 'false, fake', false)">
+            <img src="/assets/img/icons/plus.svg" alt="add">
+        </button>
     </div>
+    
     <div class="">
-        <span class="inputName">Monitoring account token</span>
-        <div class="standart-input"></div>
+        <span class="inputName">Delay (ms)</span>
+        <input type="text" class="standart-input">
     </div>
+
+    <div class="btns-block">
+        <button class="standart-btn">Start</button>
+    </div>
+
 </div>
+
+<app-popup-alo
+    *ngIf="isActivePopup"
+    [canBeAll]='canBeAllPopup' [title]="titlePopup" [placeholder]="placeholderPopup"
+    (onClosePopup)="onClosePopup()"
+ >
+</app-popup-alo>
