--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@ router-outlet{
     outline: none;
     color: #aaaaaa;
     font-family: 'Saira', sans-serif;
+    font-weight: 500;
 }
 
 a{
@@ -37,11 +38,16 @@ button, select, .pointer, input[type="submit"], option{
     cursor: pointer;
 }
 
-button{
+button, input, select, option{
     border: none;
+    transition: .3s;
 }
 
-div{
+input::placeholder{
+    color: #444444;
+}
+
+div, input, button, a, form{
     box-sizing: border-box;
 }
 
@@ -63,6 +69,18 @@ span.hr{
     width: 100%;
 }
 
+app-popup-alo{
+    top: 0px;
+    left: 0px;
+    position: absolute;
+
+    display: grid;
+
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+}
+
 
 
 .window{
@@ -70,13 +88,46 @@ span.hr{
     border-radius: 20px;
 
     display: grid;
-    grid-template-rows: repeat(auto-fill, 60px);
     row-gap: 10px;
+    position: relative;
 
     width: 100%;
     height: 100%;
     padding: 20px 50px;
 }
+
+
+
+
+
+.standart-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 8px;
+    background-color: #00AE98;
+
+    height: 38px;
+
+    color: #222222;
+    font-size: 14px;
+    font-weight: 500;
+
+    transition: .3s;
+}
+
+.standart-btn:hover{
+    background-color: #90DAD0;
+}
+
+
+
+
+
+
+
+
 
 .standart-input{
     height: 38px;
@@ -87,7 +138,98 @@ span.hr{
 
     display: grid;
     align-items: center;
+
+    width: 100%;
 }
+
+input.standart-input{
+    border: 1px solid transparent
+}
+
+input.standart-input:focus{
+    border-color: #195850;
+}
+
+button.standart-input{
+    display: flex;
+    justify-content: center;
+}
+
+button.standart-input:hover{
+    background-color: #195850;
+}
+
+.standart-input option:hover{
+    transition: .3s;
+    background-color: #222222;
+}
+
+div.standart-input{
+    grid-auto-columns: min-content;
+    grid-auto-flow: column;
+    column-gap: 5px;
+    max-width: 373px;
+    overflow-x: scroll;
+}
+
+
+div.standart-input::-webkit-scrollbar{
+    height: 0px;
+}
+  
+
+.standart-input .value{
+    display: grid;
+    grid-template-columns: 1fr 6px;
+    column-gap: 10px;
+
+    justify-self: start;
+    align-items: center;
+
+    height: 24px;
+    padding: 0px 10px;
+
+    font-size: 14px;
+    font-weight: 400;
+
+    background-color: #444444;
+    border-radius: 7px;
+}
+
+
+
+
+
+
+.input-block{
+    display: grid;
+    grid-template-columns: 1fr 38px;
+    column-gap: 10px;
+}
+
+.input-block .inputName{
+    grid-column: 1/3;
+}
+
+
+
+
+
+.btns-block{
+    align-self: end;
+    
+    display: grid;
+    column-gap: 60px;
+    grid-template-columns: 1fr 1fr;
+}
+
+.btns-block :last-child{
+    grid-column: 2/3;
+}
+
+
+
+
 
 .inputName{
     font-size: 14px;
